--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -212,6 +212,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\CommonUtility.cs" />
     <Compile Include="Utilities\EmailSender.cs" />
+    <Compile Include="Utilities\Expression\ExpressionBuilder.cs" />
+    <Compile Include="Utilities\Expression\ExpressionKeywords.cs" />
+    <Compile Include="Utilities\Expression\ExpressionParser.cs" />
+    <Compile Include="Utilities\Expression\ExpressionSerializationTypeResolver.cs" />
+    <Compile Include="Utilities\Expression\ExpressionSerializer.cs" />
+    <Compile Include="Utilities\Expression\ListSegment.cs" />
+    <Compile Include="Utilities\Expression\RequestEngineExceptions.cs" />
+    <Compile Include="Utilities\Expression\Tokens.cs" />
+    <Compile Include="Utilities\Expression\TypeUtils.cs" />
     <Compile Include="Utilities\Extension.cs" />
     <Compile Include="Utilities\FileLogger.cs" />
     <Compile Include="Utilities\MapperExtension.cs" />
@@ -242,6 +251,9 @@
     <Content Include="Images\profile-img.jpg" />
     <Content Include="Images\t-icon.png" />
     <Content Include="Images\welcome.gif" />
+    <Content Include="Scripts\AppScripts\Common.js" />
+    <Content Include="Scripts\AppScripts\MainScript.js" />
+    <Content Include="Scripts\consolelog.min.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery-migrate-1.2.1.js" />
