--- a/InplayBet.Web/Web.config
+++ b/InplayBet.Web/Web.config
@@ -21,13 +21,12 @@
     <add key="JsMinify" value="true" />
     <add key="CssMinify" value="true" />
     <!--Mail Settings Starts-->
-    <add key="MAIL_SERVER" value="dedrelay.secureserver.net" />
-    <add key="MAIL_SERVER_PORT" value="25" />
-    <add key="MAIL_SERVER_SSL" value="false" />
-    <add key="MAIL_SENDER_UID" value="info@gt-keystone.com" />
-    <add key="MAIL_SENDER_PWD" value="lgtmltd51" />
-    <add key="MAIL_SENDER_FROM" value="Keystone Team" />
-    <add key="MarchentEmailId" value="confirmorder@gt-keystone.com" />
+    <add key="MAIL_SERVER" value="smtp.gmail.com" />
+    <add key="MAIL_SERVER_PORT" value="587" />
+    <add key="MAIL_SERVER_SSL" value="true" />
+    <add key="MAIL_SENDER_UID" value="sandipghosh.dev@gmail.com" />
+    <add key="MAIL_SENDER_PWD" value="sandev@#1984" />
+    <add key="MAIL_SENDER_FROM" value="Inplay Team" />
     <!--Mail Settings Ends-->
   </appSettings>
   <system.web>
@@ -89,4 +88,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="InplayBetDBEntities" connectionString="metadata=res://*/Data.Context.InplayBetDBEntities.csdl|res://*/Data.Context.InplayBetDBEntities.ssdl|res://*/Data.Context.InplayBetDBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SANDIP-PC\DIGISQL2012;initial catalog=InplayBet;persist security info=True;user id=sa;password=san9903049505;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
