--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -77,6 +77,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO">
       <HintPath>..\packages\Microsoft.Bcl.1.1.10\lib\net40\System.IO.dll</HintPath>
@@ -194,7 +195,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Data\Context\BaseData.cs" />
+    <Compile Include="Data\Context\Bet.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\Context\BookMaker.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Context\Challenge.cs">
       <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Data\Context\InplayBetDBEntities.Context.cs">
@@ -212,7 +219,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InplayBetDBEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Data\Context\Legue.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data\Context\Status.cs">
+      <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Context\Team.cs">
       <DependentUpon>InplayBetDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Data\Context\User.cs">
