--- a/InplayBet.Web/InplayBet.Web.csproj
+++ b/InplayBet.Web/InplayBet.Web.csproj
@@ -321,6 +321,7 @@
       <DependentUpon>InplayBetDBEntities.edmx</DependentUpon>
       <LastGenOutput>InplayBetDBEntities.cs</LastGenOutput>
     </Content>
+    <None Include="Properties\PublishProfiles\Publish.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Styles\images\banner.jpg" />
     <Content Include="Styles\images\bet-promo-bnr.jpg" />
